	PR tree-optimization/63341 	* tree-vectorizer.h (vect_create_data_ref_ptr, 	vect_create_addr_base_for_vector_ref): Add another tree argument 	defaulting to NULL_TREE. 	* tree-vect-data-refs.c (vect_create_data_ref_ptr): Add byte_offset 	argument, pass it down to vect_create_addr_base_for_vector_ref. 	(vect_create_addr_base_for_vector_ref): Add byte_offset argument, 	add that to base_offset too if non-NULL. 	* tree-vect-stmts.c (vectorizable_load): Add byte_offset variable, 	for dr_explicit_realign_optimized set it to vector byte size 	- 1 instead of setting offset, pass byte_offset down to 	vect_create_data_ref_ptr.

* gcc.dg/vect/pr63341-1.c: New test.
	* gcc.dg/vect/pr63341-2.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@215583 138bc75d-0d04-0410-961f-82ee72b054a4